--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,8 @@
     margin: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 @font-face {
     font-family: "Norse Bold";
     src: url(../fonts/Norse-Bold.otf);
@@ -13,16 +15,22 @@
     flex-direction: row;
 }
 
-.background-image img {
-    width: min(600px, 50%);
+.left {
+    background: center / cover url(../images/background-image.jpg);
+    width: 35%;
+    height: 100vh;
+}
+
+.right {
+    flex-direction: column;
+    width: 65%;
+    font-family: 'Roboto', sans-serif;
 }
 
 .background-text {
     display: flex;
-    width: min(600px, 50%);
     color: white;
-    position: absolute;
-    top: 20%;
+    width: 35%;
     font-size: 7vw;
     justify-content: center;
     align-items: center;
@@ -30,6 +38,8 @@
     background-color: rgba(0, 0, 0, 0.5);
     padding-top: 10px;
     padding-bottom: 10px;
+    position: absolute;
+    top: 20%;
 }
 
 .background-text img {
@@ -37,12 +47,9 @@
 }
 
 #credit {
-    width: min(600px, 50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: -40px;
+    position: absolute;
+    bottom: 2%;
+    left: 10%;
     color: rgba(245, 245, 245, 0.885);
 }
 #credit a:link {
@@ -55,12 +62,31 @@
 
 .top-part {
     flex-direction: column;
+    background-color: rgb(249, 250, 251);
+    padding: 170px 200px 50px 30px;
+    font-weight: 550;
+    font-size: calc(18px + 0.1em);
 }
 
 .central-part {
     flex-direction: column;
+    font-weight: 550;
+    background-color: rgb(255, 255, 255);
+}
+
+label {
+    font-size: calc(10px + 0.001vw);
+}
+
+form {
+    padding-left: 30px;
+}
+
+input {
+    margin: 0 20px 20px 0;
 }
 
 .bottom-part {
     flex-direction: column;
+    background-color: rgb(249, 250, 251);
 }
