--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,7 @@ input:invalid {
     flex-direction: column;
     background-color: rgb(249, 250, 251);
     padding: 20px 0 0 30px;
-    height: 36vh;
+    height: 36%;
 }
 
 .bottom-part a {
